--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,5 +3,10 @@
   <div class="date">{{post.published_date}}</div>
   <h1><a href="{% url 'post_detail' pk=post.pk %}">{{post.title}}</a></h1>
   <p>{{post.text|linebreaksbr}}</p>
+  <img
+    src="{{post.image.url}}"
+    class="rounded intruder-image-list"
+    alt="{{post.title}}"
+  />
 </div>
 {% endfor%} {% endblock %}
